@@ -1,3 +1,7 @@
+2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/edge/actions.jl: don't exec any edge-action, while
+	mousetrapping is active (new feature in misc-1.9 branch)
+
 2011-05-28  Jeremy Hankins <nowan@nowan.org>
 	* lisp/sawfish/wm/edge/flip.jl
 	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
